@@ -1,5 +1,10 @@
 2008-09-10  Mark Wielaard  <mjw@redhat.com>
 
+	* sym.h (_stp_module): Rename module_base to dwarf_module_base.
+	* unwind.c (adjustStartLoc): Document and use dwarf_module_base.
+
+2008-09-10  Mark Wielaard  <mjw@redhat.com>
+
 	* runtime.h (CONFIG_FRAME_POINTER): Don't enable when
 	STP_USE_DWARF_UNWINDER is already defined.
 
